# Scraping

./: .gitignore  DEPLOY.md  README.md  app.py  build.sh  main.py  pyproject.toml  render.yaml  requirements.txt
src/: handle_excel.py  handle_scraping.py
src/scraping/: scraping.py
src/zaim/: scraping.py
templates/: index.html
tests/: Test_Data.xlsx  Test_Data2.xlsx  Test_Data3.xlsx  test_condition.py  test_os.py
